package com.napier.sem;

/**
 * Represents an employee
 */
public class Employee {
    /**
     * Employee number
     */
    public int emp_no;

    /**
     * Employee's first name
     */
    public String first_name;

    /**
     * Employee's last name
     */
    public String last_name;

    /**
     * Employee's job title
     */
    public String title;

    /**
     * Employee's salary
     */
    public int salary;

    /**
     * Employee's department
     */
    public Department department;

    /**
     * Employee's manager
     */
    public Employee manager;
}